# template-py

./: .gitignore  LICENSE  README.md  Taskfile.yaml  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
src/template_py/: __init__.py  add.py  add_test.py  config.py  logger.py  main.py  test_add.py
