[project]
name = "template-py"
version = "0.1.0"
description = "Python template"
license = "MIT-0"
readme = "README.md"
authors = [{ name = "your name", email = "your_name@example.com" }]
requires-python = ">=3.12.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = ["pip-audit>=2.10.0", "pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.6"]

# See https://docs.astral.sh/uv/concepts/build-backend/#choosing-a-build-backend
[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
# Mitigate supply chain attacks by excluding too new packages.
# https://docs.astral.sh/uv/reference/settings/#exclude-newer
exclude-newer = "1 week"

[tool.pyright]
# Explicitly set the type checking mode to "standard" for compatibility with Pylance.
# https://microsoft.github.io/pyright/#/configuration?id=type-check-diagnostics-settings
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = "src"
# https://docs.pytest.org/en/8.3.x/explanation/goodpractices.html#choosing-an-import-mode
addopts = "--import-mode=importlib"
